// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedbackForm Snapshots renders Research Opportunities type snapshot 1`] = `
<DocumentFragment>
  <div
    class="chr-c-feedback-content"
  >
    <div
      class="chr-c-feedback-heading"
    >
      <h1
        class="pf-v6-c-content--h1"
        data-ouia-component-id="OUIA-Generated-Content-32"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Join our research
      </h1>
      Tell us about your experience
    </div>
    <form
      class="pf-v6-c-form chr-c-feedback-content-main"
      novalidate=""
    >
      <div
        class="pf-v6-c-form__group pf-u-mt-20"
      >
        <div
          class="pf-v6-c-form__group-control"
        >
          <div
            class="pf-v6-c-check"
          >
            <input
              aria-invalid="false"
              class="pf-v6-c-check__input"
              data-ouia-component-id="OUIA-Generated-Checkbox-32"
              data-ouia-component-type="PF6/Checkbox"
              data-ouia-safe="true"
              id="feedback-checkbox"
              type="checkbox"
            />
            <label
              class="pf-v6-c-check__label"
              for="feedback-checkbox"
            >
              Yes, I would like to hear about research opportunities
            </label>
            <span
              class="pf-v6-c-check__description"
            >
              Get emails about research opportunities
            </span>
          </div>
        </div>
      </div>
    </form>
    <div
      class="pf-v6-c-action-list chr-c-feedback-footer"
    >
      <div
        class="pf-v6-c-action-list__group"
      >
        <div
          class="pf-v6-c-action-list__item"
        >
          <button
            class="pf-v6-c-button pf-m-primary chr-c-feedback-footer-button"
            data-ouia-component-id="submit-feedback"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Submit
            </span>
          </button>
        </div>
        <div
          class="pf-v6-c-action-list__item"
        >
          <button
            class="pf-v6-c-button pf-m-secondary chr-c-feedback-footer-button"
            data-ouia-component-id="back-feedback"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Back
            </span>
          </button>
        </div>
      </div>
      <div
        class="pf-v6-c-action-list__group"
      >
        <div
          class="pf-v6-c-action-list__item"
        >
          <button
            class="pf-v6-c-button pf-m-link chr-c-feedback-footer-button"
            data-ouia-component-id="cancel-feedback"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Cancel
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FeedbackForm Snapshots renders default state snapshot 1`] = `
<DocumentFragment>
  <div
    class="chr-c-feedback-content"
  >
    <div
      class="chr-c-feedback-heading"
    >
      <h1
        class="pf-v6-c-content--h1"
        data-ouia-component-id="OUIA-Generated-Content-30"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Share your feedback
      </h1>
      Tell us about your experience
    </div>
    <form
      class="pf-v6-c-form chr-c-feedback-content-main"
      novalidate=""
    >
      <div
        class="pf-v6-c-form__group"
      >
        <div
          class="pf-v6-c-form__group-label"
        >
          <label
            class="pf-v6-c-form__label"
            for="feedback-description-text"
          >
            <span
              class="pf-v6-c-form__label-text"
            >
              Feedback
            </span>
          </label>
            
        </div>
        <div
          class="pf-v6-c-form__group-control"
        >
          <span
            class="pf-v6-c-form-control pf-m-textarea pf-m-resize-both chr-c-feedback-text-area"
          >
            <textarea
              aria-invalid="false"
              id="feedback-description-text"
              name="feedback-description-text"
            />
          </span>
        </div>
      </div>
      <div
        class="pf-v6-c-form__group pf-u-mt-20"
      >
        <div
          class="pf-v6-c-form__group-control"
        >
          <div
            class="pf-v6-c-check"
          >
            <input
              aria-invalid="false"
              class="pf-v6-c-check__input"
              data-ouia-component-id="OUIA-Generated-Checkbox-30"
              data-ouia-component-type="PF6/Checkbox"
              data-ouia-safe="true"
              id="feedback-checkbox"
              type="checkbox"
            />
            <label
              class="pf-v6-c-check__label"
              for="feedback-checkbox"
            >
              Yes, I would like to hear about research opportunities
            </label>
            <span
              class="pf-v6-c-check__description"
            >
              Get emails about research opportunities
            </span>
          </div>
        </div>
      </div>
    </form>
    <div
      class="pf-v6-c-action-list chr-c-feedback-footer"
    >
      <div
        class="pf-v6-c-action-list__group"
      >
        <div
          class="pf-v6-c-action-list__item"
        >
          <button
            class="pf-v6-c-button pf-m-primary chr-c-feedback-footer-button"
            data-ouia-component-id="submit-feedback"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Submit
            </span>
          </button>
        </div>
        <div
          class="pf-v6-c-action-list__item"
        >
          <button
            class="pf-v6-c-button pf-m-secondary chr-c-feedback-footer-button"
            data-ouia-component-id="back-feedback"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Back
            </span>
          </button>
        </div>
      </div>
      <div
        class="pf-v6-c-action-list__group"
      >
        <div
          class="pf-v6-c-action-list__item"
        >
          <button
            class="pf-v6-c-button pf-m-link chr-c-feedback-footer-button"
            data-ouia-component-id="cancel-feedback"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Cancel
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FeedbackForm Snapshots renders with checkbox checked and email visible snapshot 1`] = `
<DocumentFragment>
  <div
    class="chr-c-feedback-content"
  >
    <div
      class="chr-c-feedback-heading"
    >
      <h1
        class="pf-v6-c-content--h1"
        data-ouia-component-id="OUIA-Generated-Content-31"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Share your feedback
      </h1>
      Tell us about your experience
    </div>
    <form
      class="pf-v6-c-form chr-c-feedback-content-main"
      novalidate=""
    >
      <div
        class="pf-v6-c-form__group"
      >
        <div
          class="pf-v6-c-form__group-label"
        >
          <label
            class="pf-v6-c-form__label"
            for="feedback-description-text"
          >
            <span
              class="pf-v6-c-form__label-text"
            >
              Feedback
            </span>
          </label>
            
        </div>
        <div
          class="pf-v6-c-form__group-control"
        >
          <span
            class="pf-v6-c-form-control pf-m-textarea pf-m-resize-both chr-c-feedback-text-area"
          >
            <textarea
              aria-invalid="false"
              id="feedback-description-text"
              name="feedback-description-text"
            />
          </span>
        </div>
      </div>
      <div
        class="pf-v6-c-form__group pf-u-mt-20"
      >
        <div
          class="pf-v6-c-form__group-control"
        >
          <div
            class="pf-v6-c-check"
          >
            <input
              aria-invalid="false"
              class="pf-v6-c-check__input"
              data-ouia-component-id="OUIA-Generated-Checkbox-31"
              data-ouia-component-type="PF6/Checkbox"
              data-ouia-safe="true"
              id="feedback-checkbox"
              type="checkbox"
            />
            <label
              class="pf-v6-c-check__label"
              for="feedback-checkbox"
            >
              Yes, I would like to hear about research opportunities
            </label>
            <span
              class="pf-v6-c-check__description"
            >
              Get emails about research opportunities
            </span>
          </div>
        </div>
      </div>
    </form>
    <div
      class="pf-u-font-family-heading-sans-serif chr-c-feedback-email"
    >
      Email
    </div>
    <span
      class="pf-v6-c-form-control"
    >
      <input
        aria-invalid="false"
        aria-label="Error state username example"
        data-ouia-component-id="OUIA-Generated-TextInputBase-16"
        data-ouia-component-type="PF6/TextInput"
        data-ouia-safe="true"
        id="textInput-basic-2"
        type="email"
        value=""
      />
    </span>
    <div
      class="pf-v6-c-action-list chr-c-feedback-footer"
    >
      <div
        class="pf-v6-c-action-list__group"
      >
        <div
          class="pf-v6-c-action-list__item"
        >
          <button
            class="pf-v6-c-button pf-m-primary chr-c-feedback-footer-button"
            data-ouia-component-id="submit-feedback"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Submit
            </span>
          </button>
        </div>
        <div
          class="pf-v6-c-action-list__item"
        >
          <button
            class="pf-v6-c-button pf-m-secondary chr-c-feedback-footer-button"
            data-ouia-component-id="back-feedback"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Back
            </span>
          </button>
        </div>
      </div>
      <div
        class="pf-v6-c-action-list__group"
      >
        <div
          class="pf-v6-c-action-list__item"
        >
          <button
            class="pf-v6-c-button pf-m-link chr-c-feedback-footer-button"
            data-ouia-component-id="cancel-feedback"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Cancel
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FeedbackForm Snapshots renders with email validation error snapshot 1`] = `
<DocumentFragment>
  <div
    class="chr-c-feedback-content"
  >
    <div
      class="chr-c-feedback-heading"
    >
      <h1
        class="pf-v6-c-content--h1"
        data-ouia-component-id="OUIA-Generated-Content-33"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Share your feedback
      </h1>
      Tell us about your experience
    </div>
    <form
      class="pf-v6-c-form chr-c-feedback-content-main"
      novalidate=""
    >
      <div
        class="pf-v6-c-form__group"
      >
        <div
          class="pf-v6-c-form__group-label"
        >
          <label
            class="pf-v6-c-form__label"
            for="feedback-description-text"
          >
            <span
              class="pf-v6-c-form__label-text"
            >
              Feedback
            </span>
          </label>
            
        </div>
        <div
          class="pf-v6-c-form__group-control"
        >
          <span
            class="pf-v6-c-form-control pf-m-textarea pf-m-resize-both chr-c-feedback-text-area"
          >
            <textarea
              aria-invalid="false"
              id="feedback-description-text"
              name="feedback-description-text"
            />
          </span>
        </div>
      </div>
      <div
        class="pf-v6-c-form__group pf-u-mt-20"
      >
        <div
          class="pf-v6-c-form__group-control"
        >
          <div
            class="pf-v6-c-check"
          >
            <input
              aria-invalid="false"
              class="pf-v6-c-check__input"
              data-ouia-component-id="OUIA-Generated-Checkbox-33"
              data-ouia-component-type="PF6/Checkbox"
              data-ouia-safe="true"
              id="feedback-checkbox"
              type="checkbox"
            />
            <label
              class="pf-v6-c-check__label"
              for="feedback-checkbox"
            >
              Yes, I would like to hear about research opportunities
            </label>
            <span
              class="pf-v6-c-check__description"
            >
              Get emails about research opportunities
            </span>
          </div>
        </div>
      </div>
    </form>
    <div
      class="pf-u-font-family-heading-sans-serif chr-c-feedback-email"
    >
      Email
    </div>
    <span
      class="pf-v6-c-form-control pf-m-error"
    >
      <input
        aria-invalid="true"
        aria-label="Error state username example"
        data-ouia-component-id="OUIA-Generated-TextInputBase-17"
        data-ouia-component-type="PF6/TextInput"
        data-ouia-safe="true"
        id="textInput-basic-2"
        type="email"
        value="invalid-email"
      />
      <span
        class="pf-v6-c-form-control__utilities"
      >
        <span
          class="pf-v6-c-form-control__icon pf-m-status"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </span>
      </span>
    </span>
    <div
      class="pf-v6-c-alert pf-m-inline pf-m-plain pf-m-danger"
      data-ouia-component-id="OUIA-Generated-Alert-danger-3"
      data-ouia-component-type="PF6/Alert"
      data-ouia-safe="true"
    >
      <div
        class="pf-v6-c-alert__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
      </div>
      <h4
        class="pf-v6-c-alert__title"
      >
        <span
          class="pf-v6-screen-reader"
        >
          Danger alert:
        </span>
        Email address is invalid.
      </h4>
    </div>
    <div
      class="pf-v6-c-action-list chr-c-feedback-footer"
    >
      <div
        class="pf-v6-c-action-list__group"
      >
        <div
          class="pf-v6-c-action-list__item"
        >
          <button
            class="pf-v6-c-button pf-m-primary chr-c-feedback-footer-button"
            data-ouia-component-id="submit-feedback"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Submit
            </span>
          </button>
        </div>
        <div
          class="pf-v6-c-action-list__item"
        >
          <button
            class="pf-v6-c-button pf-m-secondary chr-c-feedback-footer-button"
            data-ouia-component-id="back-feedback"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Back
            </span>
          </button>
        </div>
      </div>
      <div
        class="pf-v6-c-action-list__group"
      >
        <div
          class="pf-v6-c-action-list__item"
        >
          <button
            class="pf-v6-c-button pf-m-link chr-c-feedback-footer-button"
            data-ouia-component-id="cancel-feedback"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Cancel
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
